--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
+    "aos": "^2.3.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.3.0",
