--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@mui/x-date-pickers": "^7.27.3",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "i": "^0.3.7",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.3.0",
