--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
+    "@tanstack/react-query": "^5.69.3",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
@@ -25,8 +26,8 @@
     "framer-motion": "^12.5.0",
     "i": "^0.3.7",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
     "react-big-calendar": "^1.18.0",
+    "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
