--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
+    "@tanstack/react-query": "^5.70.0",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
