--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
     "i": "^0.3.7",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
@@ -42,10 +44,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
