--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
