--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^11.1.0"
