--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
